--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,6 +14,7 @@ html, * {
   margin: 0;
   box-sizing: border-box;
   overscroll-behavior: none;
+  /* border: 1px solid rebeccapurple; */
 }
 
 html{
